--- a/CSTV/Scenes/Match Detail/MatchDetailHeaderView.xib
+++ b/CSTV/Scenes/Match Detail/MatchDetailHeaderView.xib
@@ -10,9 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MatchDetailHeaderView" customModule="CSTV" customModuleProvider="target">
+        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="MatchDetailHeaderView" customModule="CSTV" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="336" height="263"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="jES-r7-h1D">
                     <rect key="frame" x="71.333333333333329" y="0.0" width="193.33333333333337" height="209"/>
@@ -100,10 +99,8 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ggj-3h-cLU" secondAttribute="trailing" id="0TR-4S-W3R"/>
                 <constraint firstItem="jES-r7-h1D" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="8ln-In-0ds"/>
                 <constraint firstItem="ggj-3h-cLU" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UNt-Ra-4F0"/>
-                <constraint firstItem="ggj-3h-cLU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="g4I-2q-wmO"/>
                 <constraint firstAttribute="bottom" secondItem="ggj-3h-cLU" secondAttribute="bottom" constant="20" id="gRO-XQ-m60"/>
                 <constraint firstItem="jES-r7-h1D" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ggc-CW-ChZ"/>
                 <constraint firstItem="ggj-3h-cLU" firstAttribute="top" secondItem="jES-r7-h1D" secondAttribute="bottom" constant="20" id="vVO-u6-Bs5"/>
